build: 构建质量收尾（spotbugs baseline 重建 + agentlib 零容忍修复）
- gsim-core/gsim-agent/gsim-app baseline 重建（111/100/70 findings），删除 gsim-lib-baseline
- gsim-app spotbugs 切 ratchet 模式；check-baseline.sh 模块名更新
- gsim-agentlib 9 个 Medium finding 修复：CT_CONSTRUCTOR_THROW×6 抑制、REC_CATCH_EXCEPTION 收窄、EI_EXPOSE_REP×2 防御拷贝
- mvn clean verify BUILD SUCCESS（五模块）

Co-Authored-By: Claude <noreply@anthropic.com>